syntax = "proto3";

package grpcproto;

import "geometry.proto";
import "common.proto";

message registerTripRequest {
    int64 carID = 1;
    int64 beginLeaveTime = 2;
    int64 endLeaveTime = 3;
    point from = 4;
    point to = 5;
    int32 maxDistance = 6;
}

message findTripRequest {
    int64 beginLeaveTime = 1;
    int64 endLeaveTime = 2;
    point from = 3;
    point to = 4;
    int32 option = 5;
}

message carObject {
    int32 id = 1;
    string licensePlate = 2;
    string color = 3;
    string model = 4;
}

message listCarResponse {
    repeated carObject cars = 1;
}

service car {
    // driver
    rpc registerTrip(registerTripRequest) returns (grpcproto.bool);
    rpc registerCar(carObject) returns (grpcproto.bool);
    rpc listMyCar(int) returns (listCarResponse);
    rpc updateCar (carObject) returns (grpcproto.bool);
    rpc deleteCar (int) returns (grpcproto.bool);
    // user
    rpc findTrip(findTripRequest) returns (jsonResponse);
}